tests/ui/uninhabited/uninhabited-unstable-field.current.stderr
error[E0004]: non-exhaustive patterns: type `Foo<Void>` is non-empty
  --> $DIR/uninhabited-unstable-field.rs:15:11
   |
LL |     match x {}
   |           ^
   |
note: `Foo<Void>` defined here
  --> $DIR/auxiliary/staged-api.rs:5:1
   |
LL | pub struct Foo<T> {
   | ^^^^^^^^^^^^^^^^^
   = note: the matched value is of type `Foo<Void>`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown
   |
LL ~     match x {
LL +         _ => todo!(),
LL ~     }
   |

error[E0004]: non-exhaustive patterns: `MyCoroutineState::Complete(_)` not covered
  --> $DIR/uninhabited-unstable-field.rs:34:11
   |
LL |     match x {
   |           ^ pattern `MyCoroutineState::Complete(_)` not covered
   |
note: `MyCoroutineState<i32, !>` defined here
  --> $DIR/auxiliary/staged-api.rs:11:1
   |
LL | pub enum MyCoroutineState<Y, R> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |     Yielded(Y),
LL |     Complete(R),
   |     -------- not covered
   = note: the matched value is of type `MyCoroutineState<i32, !>`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         MyCoroutineState::Yielded(_) => {},
LL +         MyCoroutineState::Complete(_) => todo!()
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0004`.
